# Vortex

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: app.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: tray-capability.json
src-tauri/src/: lib.rs  main.rs
src/components/: guide-left-control-section.jsx  guide-left-view.jsx  guide-title.jsx  guide-top-control-section.jsx  guide-top-search-section.jsx  guide-top-view.jsx  page-cookies-host-card.jsx  page-setting-setting-card.jsx
src/components/utils/: plugin-dialog.jsx  plugin-global-shortcut.jsx  plugin-invokefn.jsx  plugin-listen.jsx  plugin-notification.jsx  plugin-path.jsx  plugin-process.jsx  plugin-reuse-tools.jsx  plugin-theme.jsx  plugin-tray.jsx  plugin-webview.jsx  plugin-window.jsx
src/css/: guide.css  page-cookies.css  page-default.css  page-download.css  page-setting.css  plugin-dialog.css  styles.css
src/dataloader/: parameter-cookies.jsx  parameter-download.jsx  parameter-guide-control.jsx  parameter-html.jsx  parameter-setting.jsx
src/views/: guide-aside-view.jsx  page-cookies.jsx  page-default.jsx  page-download.jsx  page-main-view.jsx  page-setting.jsx
