[package]
name = "vortex"
version = "0.3.0"
description = "Vortex"
authors = ["cck"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset",'unstable','tray-icon','webview-data-url','devtools'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tokio = { version = "1.36", features = ["full"] }
widestring = "1.0.2"

[target."cfg(windows)".dependencies.webview2-com]
version = "0.30"

[target."cfg(windows)".dependencies.windows]
features = ["Win32_Foundation"]
version = "0.56"



